# swarmotter

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  book.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  legal_content_report.md
.github/workflows/: ci.yml  release.yml
.kilo/: kilo.jsonc
config/: swarmotter.container.toml.example  swarmotter.toml.example
crates/swarmotter-api/: Cargo.toml
crates/swarmotter-api/src/: encoding.rs  envelope.rs  error.rs  lib.rs  routes.rs  state.rs
crates/swarmotter-api/src/handlers/: autopilot.rs  diagnostics.rs  events.rs  files.rs  health.rs  mod.rs  network.rs  peer_filter.rs  peers.rs  policies.rs  qbittorrent.rs  queue.rs  settings.rs  stats.rs  storage.rs  torrents.rs  trackers.rs  transmission.rs  watch.rs
crates/swarmotter-api/src/handlers/torrents/: add.rs  bulk.rs  lifecycle.rs  metainfo.rs  mod.rs  query.rs  settings.rs  tests.rs
crates/swarmotter-api/tests/: api_integration.rs  fake_daemon.rs  origin_matrix.rs  port_test_api.rs  scale_harness.rs
crates/swarmotter-core/: Cargo.toml
crates/swarmotter-core/examples/: gen_test_torrents.rs
crates/swarmotter-core/src/: autopilot.rs  bandwidth.rs  bencode.rs  config.rs  dht.rs  endgame.rs  error.rs  extensions.rs  hash.rs  lib.rs  magnet.rs  meta.rs  mse.rs  peer.rs  peer_filter.rs  policy.rs  port_mapping.rs  port_test.rs  queue.rs  ratio.rs  torrent.rs  tracker.rs  udp_tracker.rs  utp.rs  v2.rs  watch.rs
crates/swarmotter-core/src/models/: diagnostics.rs  health.rs  mod.rs  network.rs  peer.rs  stats.rs  storage.rs  torrent.rs  tracker.rs
crates/swarmotter-core/src/net/: binder.rs  config.rs  http.rs  mod.rs  probe.rs  socks5.rs
crates/swarmotter-core/src/storage/: diagnostics.rs  io.rs  layout.rs  metrics.rs  mod.rs  resume.rs
crates/swarmotter-core/src/utp/: congestion.rs  header.rs  mod.rs  sack.rs  stream.rs
crates/swarmotter-web/: Cargo.toml
crates/swarmotter-web/assets/: app.js  index.html  seeding-policy.js  style.css  theme-bootstrap.js  watch-history.js
crates/swarmotter-web/assets/js/: api.js  details.js  events.js  settings.js  state.js  torrents.js  ui.js
crates/swarmotter-web/src/: lib.rs
crates/swarmotter-web/tests/: app-startup.test.mjs  peer-filter.test.mjs  policy-source-labels.test.mjs  port-mapping.test.mjs  port-test.test.mjs  seeding-policy.test.js  watch-history.test.js
crates/swarmotterd/: Cargo.toml
crates/swarmotterd/src/: containment_gate.rs  daemon.rs  dht.rs  engine.rs  lib.rs  logging.rs  main.rs  metadata.rs  netbinder.rs  peer_permits.rs  runtime.rs  seeder.rs  state_store.rs
crates/swarmotterd/src/daemon/: construction.rs  containment.rs  diagnostics.rs  lifecycle.rs  mod.rs  persistence.rs  policy_runtime.rs  port_mapping.rs  port_test.rs  scheduler.rs  seeding.rs  settings.rs  storage_controls.rs  tests.rs  watch.rs
crates/swarmotterd/src/engine/: discovery.rs  download.rs  endgame.rs  mod.rs  parallel.rs  peer_session.rs  progress.rs  tests.rs  v2.rs  webseed.rs
crates/swarmotterd/tests/: containment.rs  containment_transition.rs  daemon_download.rs  local_swarm.rs  local_throughput_tuning.rs  metadata_ingress.rs  public_paths.rs
deploy/: .env.example  Dockerfile  compose.yml  gluetun.env.example  nfpm.yaml  swarmotterd.service  update-swarmotter.sh
deploy/package/: postinstall.sh  postremove.sh  preinstall.sh
design/: 2026-07-12.REVIEW.md  BACKLOG.md  COMPARISON.md  PRD.md  VERSIONING_GUIDE.md  api.md  architecture.md  configuration.md  content-policy.md  deployment.md  docs-publishing.md  lawful-use.md  legal.md  local-throughput-tuning-2026-07-09.md  requirements.md  scaling-implementation-plan.md  testing.md  throughput-scaling-deployment-2026-07-09.md  v1-completion-tracker.md  v1-traceability.md  vpn-network-containment.md
design/ADR/: 0000-template.md  README.md
design/adr/: 0000-template.md  0001-record-architecture-decisions.md  0002-use-rust-for-daemon-and-core-engine.md  0003-release-model-v1-only-no-mvp.md  0004-api-first-daemon-architecture.md  0005-strict-vpn-nic-network-containment.md  0006-function-over-form-web-ui.md  0007-apache-2-license.md  0008-lawful-use-and-no-piracy-oriented-features.md  0009-foundational-dependency-stack.md  0010-api-versioning-envelope-events.md  0011-bencode-and-fast-resume-format.md  0012-network-binder-centralized-containment.md  0013-peer-wire-protocol-architecture.md  0014-tracker-implementation-strategy.md  0015-real-storage-io-and-fast-resume.md  0016-task-runtime-model-for-live-engine.md  0017-local-swarm-testing-approach.md  0018-https-tracker-tls-over-contained-sockets.md  0019-dht-implementation-strategy.md  0020-utp-implementation-strategy.md  0021-selfish-completion-policy.md  0022-api-auth-and-contained-resolution-hardening.md  (+46 more)
docs/: SUMMARY.md  api.md  configuration.md  deployment.md  getting-started.md  index.md  lawful-use.md  legal.md  network-containment.md  troubleshooting.md  v1-completion-tracker.md  web-ui.md
scripts/: bump_version.sh  check-web-js-modules.sh  check-web-ui-startup.sh  do-pr-prechecks.py  test-network-containment-transition.sh
src/: lib.rs  main.rs
src/api/: handlers.rs  (+3 more)
(+13 files in other folders)
