[workspace]
resolver = "2"
members = [
    "crates/swarmotterd",
    "crates/swarmotter-core",
    "crates/swarmotter-api",
    "crates/swarmotter-web",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.75"
repository = "https://github.com/swarmotter/swarmotter"