[workspace]
resolver = "2"
members = [
    "crates/swarmotterd",
    "crates/swarmotter-core",
    "crates/swarmotter-api",
    "crates/swarmotter-web",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.75"
repository = "https://github.com/sphildreth/swarmotter"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "fs", "sync", "time", "signal"] }
bytes = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling and logging
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP API framework (control plane only)
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }

# Hashing
sha1 = "0.10"

# Hex/encoding
hex = "0.4"

# URL parsing (magnet links, trackers)
url = "2"

# TLS for HTTPS trackers over contained sockets (Apache-2.0 / MIT)
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
webpki-roots = "0.26"

# Misc
once_cell = "1"
async-trait = "0.1"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
clap = { version = "4", features = ["derive", "env"] }