[package]
name = "swarmotter-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Core types and engine logic for SwarmOtter"

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha1 = { workspace = true }
hex = { workspace = true }
url = { workspace = true }
async-trait = { workspace = true }
libc = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }

[dev-dependencies]
rcgen = "0.13"

[features]
default = []
# Exposes the loopback NetworkBinder used by integration tests across crates.
test-binder = []
