[package]
name = "swarmotterd"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "SwarmOtter daemon binary"

[lib]
name = "swarmotterd"
path = "src/lib.rs"

[dependencies]
swarmotter-core = { path = "../swarmotter-core" }
swarmotter-api = { path = "../swarmotter-api" }
swarmotter-web = { path = "../swarmotter-web" }
tokio = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
once_cell = { workspace = true }
clap = { workspace = true }
url = { workspace = true }

[dev-dependencies]
swarmotter-core = { path = "../swarmotter-core", features = ["test-binder"] }